<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="Home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/friends"
            android:title="@string/friends"
            android:icon="@drawable/ic_person"/>
        <item
            android:id="@+id/hunts"
            android:title="Hunts"
            android:icon="@android:drawable/ic_menu_camera"/>
    </group>
    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/settings"
                android:title="@string/profile"
                android:icon="@drawable/ic_setting"/>
            <item
                android:id="@+id/logout"
                android:title="@string/logout2"
                android:icon="@drawable/ic_exit"/>
        </menu>
    </item>
</menu>