<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/logo"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="40dp"/>

    <LinearLayout
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:theme="@style/TextLabel">

        <EditText
            android:hint="@string/email"
            android:id="@+id/et_email"
            android:drawableRight="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textColorHighlight="@color/white" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">

        <EditText
            android:hint="@string/password"
            android:id="@+id/et_password"
            android:drawableRight="@drawable/ic_key"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textColorHighlight="@color/white"
            android:textColor="@color/white" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:background="@color/btn_login_bg"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/orview"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:text="@string/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.facebook.login.widget.LoginButton
            android:layout_marginTop="10dp"
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_reset_password"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/noacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:id="@+id/progress"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

    </LinearLayout>
</LinearLayout>